samples/_failures_safe/1761257873_08abe7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f48ed741.c: In function ‘handle_event’:
./samples/SAFE/__tmp_f48ed741.c:151:13: error: expected expression at end of input
  151 |             if (
      |             ^~
./samples/SAFE/__tmp_f48ed741.c:151:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f48ed741.c:151:13: error: expected declaration or statement at end of input
